静态文件浏览器缓存问题

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=e91d89f8325ef6949457",
+    "/css/app.css": "/css/app.css?id=5cc067a02836a3f8044f"
 }
